[project]
name = "search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.4.0",
    "bs4>=0.0.2",
    "callbacks>=0.3.0",
    "chromadb>=1.4.0",
    "ddgs>=9.10.0",
    "duckdb>=1.4.3",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.13.2",
    "huggingface-hub>=0.36.0",
    "ipykernel>=7.1.0",
    "langchain>=1.2.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langchain-text-splitters>=1.1.0",
    "mysql-connector-python>=9.5.0",
    "numexpr>=2.14.1",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pymupdf>=1.26.7",
    "pypdf>=6.6.0",
    "python-dotenv>=1.2.1",
    "pytube>=15.0.0",
    "sentence-transformers>=5.2.0",
    "sqlalchemy>=2.0.45",
    "unstructured>=0.18.27",
    "validators==0.28.1",
    "wikipedia>=1.4.0",
    "youtube-transcript-api>=1.2.3",
]
